CSV-2630 implement 2 login rule tests